--- a/src/app/portal/portal.html
+++ b/src/app/portal/portal.html
@@ -1,5 +1,6 @@
 <section data-ng-controller="portal as vm">
     
-    <div data-ng-repeat='article in vm.articles'>{{article.Title}}</div>
+    
+    <div class='article' data-ng-repeat='article in vm.articles'>{{article.Title}}</div>
     
 </section>
