--- a/src/app/portal/portal.html
+++ b/src/app/portal/portal.html
@@ -1,6 +1,39 @@
 <section data-ng-controller="portal as vm">
     
-    
-    <div class='article' data-ng-repeat='article in vm.articles'>{{article.title}}</div>
-    
+    <div class="row-fluid">
+        <div class="categoryListingTitle">
+<!--            <p>@Html.ActionLink(Model.Categories[categoryId], "Index", new { id = 1, cid = categoryId })</p>-->
+        </div>
+        
+        <ul class="thumbs">
+
+            @foreach (var article in Model.ArticlesPerCategory[categoryId])
+            {
+                if (article.Pictures != null && article.Pictures.Count > 0 && !string.IsNullOrEmpty(article.Pictures.First()))
+                    {
+                        <li class="col-md-4">
+                            <div class="thumbnail">
+                                <img style="max-height: 200px" src="@article.Pictures.First()" alt="@article.Title" />
+                                <div class="caption">
+                                    <h3 class="text-center" >@Html.ActionLink(article.GetFormatedTitle(), "Show", new {id = article.Id})</h3>
+                                    <p>@article.Summary</p>
+                                </div>
+                            </div>
+                        </li>
+                    }
+            }
+
+        </ul>
+        <div class='article' data-ng-repeat='article in vm.articles'>
+            <li class="col-md-4">
+                <div class="thumbnail">
+                    <img style="max-height: 200px" src="{article.Picture}" alt="{article.title}" />
+                    <div class="caption">
+                        <h3 class="text-center">{article.titleLink}</h3>
+                        <p>{article.description}</p>
+                    </div>
+                </div>
+            </li>
+        </div>
+    </div>
 </section>
