jordan is working

--- a/src/app/portal/galleryView.html
+++ b/src/app/portal/galleryView.html
@@ -2,7 +2,7 @@
     <div class="cycle-slideshow" data-ng-controller="gallery">
 
         <a
-                data-ng-href='#{{article.id}}'
+                data-ng-href='#{{vm.suburl}}/{{article.id}}'
                 id="article_{{article.id}}"
                 data-modal="modal-12" data-ng-click="vm.showArticle(article.id)"
                 data-cycle-background="{{article.pictures}}"
