added css files

--- a/src/app/portal/portal.html
+++ b/src/app/portal/portal.html
@@ -1,4 +1,4 @@
-<div data-ng-controller="portal as vm" data-ng-show="vm.viewsGroups.length > 0">
+<section data-ng-controller="portal as vm" data-ng-show="vm.viewsGroups.length > 0">
 
     <div class="row" data-ng-repeat="viewsGroup in vm.viewsGroups">
         <div data-ng-repeat="view in viewsGroup">
@@ -6,4 +6,4 @@
         </div>
     </div>
 
-</div>
+</section>
