--- a/src/app/portal/galleryView.html
+++ b/src/app/portal/galleryView.html
@@ -70,7 +70,9 @@
 
     </div>
 
-</div><!--/section.row.entries-->
+</div>
+
+<!--/section.row.entries-->
 
 <!--<section class="col-md-6">-->
     <!--<div class="cycle-slideshow" data-ng-controller="gallery">-->
