--- a/src/app/layout/header.html
+++ b/src/app/layout/header.html
@@ -120,7 +120,7 @@
 
                     </div>
                 </li>
-                <li class="active">
+                <li class="active" data-ng-show="false">
                     <a href="#" data-toggle="li">Features</a>
                     <div class="subnav-wrapper">
                         <ul class="subnav">
@@ -153,7 +153,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="full-subnav-wrapper">
+                <li class="full-subnav-wrapper" data-ng-show="false">
                     <a href="#" data-toggle="li">Drop Down 2</a>
 
                     <div class="row subnav-wrapper subnav-tabbed">
@@ -401,7 +401,7 @@
                     </div>
 
                 </li>
-                <li>
+                <li data-ng-show="false">
                     <a href="#" data-toggle="li">Drop Down 3</a>
 
                     <div class="subnav-wrapper">
@@ -419,13 +419,8 @@
                     </div>
 
                 </li>
-                <li><a href="#">Category 1</a></li>
-                <li><a href="#">Category 2</a></li>
-                <li><a href="#">Category 3</a></li>
-                <li><a href="#">Category 4</a></li>
-                <li><a href="#">Category 5</a></li>
-                <li><a href="#">Category 6</a></li>
-                <li><a href="#">Category 7</a></li>
+                <li><a href="#">أخبار عامة</a></li>
+                <li><a href="#/country/962">من الأردن</a></li>
             </ul>
 
         </div>
